<resources>

    <string name="app_name">ShareImageApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Image Sharing</string>
    <string name="photo">Photo</string>
    <string name="info">Info</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="history">History</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Done</string>
    <string name="name">Name</string>
    <string name="ip_address">IP Address</string>
    <string name="delete_contact">Delete</string>
    <string name="back">Back</string>
    <string name="view_all_transaction">All History</string>

</resources>