<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/photo_textView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/photo" />

        <TextView
            android:id="@+id/info_textView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/info" />

        <TextView
            android:id="@+id/contact_textView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/contact" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <ImageButton
                android:id="@+id/addPhoto_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:contentDescription="Add Photo Button"
                android:src="@drawable/button_add_icon" />

            <ImageButton
                android:id="@+id/removePhoto_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="Remove Photo Button"
                android:src="@drawable/remove_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/share" />

            <Button
                android:id="@+id/history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/addContact_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:contentDescription="Add Contact Button"
                android:src="@drawable/button_add_icon" />

            <ImageButton
                android:id="@+id/removeContact_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:contentDescription="Remove Contact Button"
                android:src="@drawable/remove_icon" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="3" >

        <ListView
            android:id="@+id/listPhoto_listView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>

        <LinearLayout
            android:id="@+id/information_linearLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/infomation_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listContact_listView"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>
    </TableRow>

</TableLayout>